--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:7.1.0'
     implementation 'io.appium:java-client:7.3.0'
+    implementation 'org.slf4j:slf4j-parent:1.7.25'
 }
 
 test {
